# elham

./: Defs  Defs.in  GNUmakefile  README  Rules  config.h.in  configure.ac
doc/: build.txt  elham.html  modulelicense.txt
src/: GNUmakefile  actions.c  datadump.c  dirent.c  elham.c  elham.h  endy.c  glue.c  histdump.c  io.c  list.c  metadump.c  mt.c  state.c
